<resources>
    <string name="app_name">geoquest</string>
    <string name="question_text"></string>
    <string name="true_button">Yes</string>
    <string name="false_button">No</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="answer_button">Answer</string>
    <string name="question_oceans">The Pacific Ocean is Larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the Largest river in the Americas.</string>
    <string name="question_asia">Lake  Baikal is the world\`s oldest and deepest freshwater lake.</string>
    <string name="count_using_answers">of 3</string>
    <string name="not_answer">use the most tips</string>
    <string name="clear_button">clear info</string>
</resources>
